perf: alert queries